--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,5 @@
   <body>
     <div id="root"></div>
     <script src="./main.js"></script>
-  <script src="main.js"></script></body>
+  </body>
 </html>
